--- a/L/Lathe/Versions.toml
+++ b/L/Lathe/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "064cdf17177814c2d5a7a0609f9b5a46397283b8"
 
 ["0.1.1"]
 git-tree-sha1 = "b25997960e7a0cf89a912788137eb76875ceaf43"
+
+["0.1.2"]
+git-tree-sha1 = "276b0ff7ec8bd829da525c4e936f52c42b448930"
